- Resolved #83170 (americanize CPRV date format).  Modified project-local copy of MyFaces HtmlDateRenderer.java.  Also modified to prevent wrapping between individual fields of the date component when in rendered in edit mode. - Minor formatting changes to cherryPickRequestViewer.jsp to avoid unwanted wrapping between labels and date fields; added '.nowrap' css style class.
git-svn-id: https://forge.abcd.harvard.edu/svn/screensaver/trunk@1505 80c535d0-b110-0410-b4de-9279f94142c3

--- a/web/css/screensaver.css
+++ b/web/css/screensaver.css
@@ -335,3 +335,7 @@ a.menuItem:hover,a.menuItemActive:hover {
 	font-style: italic;
 	font-weight: bold;
 }
+
+.nowrap {
+	white-space: nowrap;
+}
